--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,32 @@
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Custom
 *.log
 *.swp
-.DS_Store
 .envrc
 .idea/
 .tmp/
-.vscode/
 app/src/js/config/local.js
 artifacts/
 cypress/screenshots/
