--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Earthdata Pub Dev Team",
   "license": "Apache-2.0",
   "dependencies": {
+    "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
   },
