--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
   "author": "Earthdata Pub Dev Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "bootstrap": "^5.0.1",
+    "bootstrap": "^5.1.0",
     "core-js": "^3.6.5",
     "snyk": "^1.649.0",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
-    "@vue/cli": "^4.5.13",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
