--- a/package.json
+++ b/package.json
@@ -41,23 +41,23 @@
   "dependencies": {
     "bootstrap": "^5.1.0",
     "core-js": "^3.6.5",
+    "cypress-localstorage-commands": "^1.6.1",
+    "dotenv": "^14.3.2",
     "snyk": "^1.649.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.11",
-    "cypress-localstorage-commands": "^1.6.1",
-    "dotenv": "^14.3.2"
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0",
     "axe-core": "^4.4.1",
+    "babel-eslint": "^10.1.0",
     "cypress": "^9.5.1",
-    "cypress-axe": "^0.14.0"
+    "cypress-axe": "^0.14.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0"
   },
   "eslintConfig": {
     "root": true,
