--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VUE_APP_API_ROOT=http://localhost:8080/api
 VUE_APP_DASHBOARD_ROOT=http://localhost:3000
+VUE_APP_FORMS_ROOT=http://localhost:8081
 VUE_APP_OVERVIEW_ROOT=$OVERVIEW_ROOT
