Upgrade node version to v14 to support v12 EOL.

--- a/.gitignore
+++ b/.gitignore
@@ -150,5 +150,6 @@ autodocs
 .snyk
 package-lock.json
 
-# Videos from testing
-videos/*.*
+# Testing videos/ fixtures
+cypress/videos/*
+cypress/fixtures/*
