--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "dotenv": "^14.3.2",
     "snyk": "^1.649.0",
     "vue": "^3.2.40",
-    "vue-router": "^4.0.11",
+    "vue-router": "^4.1.5",
+    "vue-simple-scroll-up": "^0.1.5",
     "vue3-popper": "^1.5.0"
   },
   "devDependencies": {
