--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PUBLIC_PATH=/
 VUE_APP_API_ROOT=http://localhost:8080/api
 VUE_APP_DASHBOARD_ROOT=http://localhost:3000
 VUE_APP_FORMS_ROOT=http://localhost:8081
-VUE_APP_OVERVIEW_ROOT=http://localhost:8082
+VUE_APP_OVERVIEW_ROOT=https://daac.ornl.gov
