--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "snyk-test": "snyk test",
     "snyk-prepare": "npm run snyk-protect",
     "serve": "vue-cli-service serve",
-    "build": "NODE_ENV=production webpack --config webpack.config.js",
+    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "start-overview-dev": "docker-compose -f docker-compose-dev.yml up -d",
     "stop-overview-dev": "docker-compose -f docker-compose-dev.yml down",
