update repo names

--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "stop-overview-dev": "docker-compose -f docker-compose-dev.yml down",
     "start-overview": "docker-compose -f docker-compose.yml up -d",
     "stop-overview": "docker-compose -f docker-compose.yml down",
-    "start-api": "cd ../api && npm run start:detached",
-    "stop-api": "cd ../api && npm run stop",
-    "start-dashboard": "cd ../dashboard && npm run start-dashboard",
-    "stop-dashboard": "cd ../dashboard && npm run stop-dashboard",
-    "start-forms-dev": "cd ../forms && npm run start-forms-dev",
-    "stop-forms-dev": "cd ../forms && npm run stop-forms-dev",
-    "start-dev": "npm run start-api; npm run start-dashboard; npm run start-forms-dev; npm run start-overview-dev",
-    "stop-dev": "npm run stop-api; npm run stop-dashboard; npm run stop-forms-dev; npm run stop-overview-dev"
+    "start-api": "cd ../earthdata-pub-api && npm run start:detached",
+    "stop-api": "cd ../earthdata-pub-api && npm run stop",
+    "start-dashboard": "cd ../earthdata-pub-dashboard && npm run start-dashboard",
+    "stop-dashboard": "cd ../earthdata-pub-dashboard && npm run stop-dashboard",
+    "start-forms-dev": "cd ../earthdata-pub-forms && npm run start-forms-dev",
+    "stop-forms-dev": "cd ../earthdata-pub-forms && npm run stop-forms-dev",
+    "start-dev": "npm run start-api && npm run start-dashboard && npm run start-forms-dev && npm run start-overview-dev",
+    "stop-dev": "npm run stop-api && npm run stop-dashboard && npm run stop-forms-dev && npm run stop-overview-dev"
   },
   "repository": {
     "type": "git",
