--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "cypress": "npx cypress open",
     "cypress-headless": "npx cypress run",
-    "cypress-headless-all": "npx cypress run --browser chrome; npx cypress run --browser chromium; npx cypress run --browser edge; npx cypress run --browser electron",
+    "cypress-headless-all": "npx cypress run --browser chrome && npx cypress run --browser chromium && npx cypress run --browser edge && npx cypress run --browser electron",
     "clean-modules": "rm -rf package-lock.json node_modules/",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
