--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -22,6 +22,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Set Up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+      - name: Install dependencies including dev dependencies
+        run: npm install --include=dev
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
         env:
@@ -41,7 +47,7 @@ jobs:
   #       run: npm install
   #     - name: Build local app
   #       run: npm run build:local
-  #     - name: Build production app
+  #     - name: Build production app  
   #       run: npm run build
   #     - name: Run unit tests
   #       run: npm run test
