--- a/package.json
+++ b/package.json
@@ -24,10 +24,8 @@
     "stop-api": "cd ../earthdata-pub-api && npm run stop",
     "start-dashboard": "cd ../earthdata-pub-dashboard && npm run start-dashboard",
     "stop-dashboard": "cd ../earthdata-pub-dashboard && npm run stop-dashboard",
-    "start-forms-dev": "cd ../earthdata-pub-forms && npm run start-forms-dev",
-    "stop-forms-dev": "cd ../earthdata-pub-forms && npm run stop-forms-dev",
-    "start-dev": "npm run start-api && npm run start-dashboard && npm run start-forms-dev && npm run start-overview-dev",
-    "stop-dev": "npm run stop-api && npm run stop-dashboard && npm run stop-forms-dev && npm run stop-overview-dev"
+    "start-dev": "npm run start-api && npm run start-dashboard && npm run start-overview-dev",
+    "stop-dev": "npm run stop-api && npm run stop-dashboard && npm run stop-overview-dev"
   },
   "repository": {
     "type": "git",
